<?xml version="1.0" encoding="utf-8"?>

<!--Created by Deni Supriyatna on 04 - Apr - 2020.-->
<!--Email : denisupriyatna01@gmail.com-->

<layout>

    <data>

        <import type="com.deni.retrofitcrud.view.MhsDetailActivity" />

        <import type="com.deni.retrofitcrud.model.DataMahasiswa" />

        <variable
            name="activity"
            type="MhsDetailActivity" />

        <variable
            name="data_mhs"
            type="DataMahasiswa" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MhsDetailActivity">

        <ScrollView
            android:id="@+id/sv_mhs_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <LinearLayout
                android:id="@+id/ll_mhs_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_margin="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_npm_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_npm_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="NPM"
                        android:text="@={data_mhs.npm}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_nama_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_nama_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@={data_mhs.namaMahasiswa}"
                        android:hint="@string/college_student_name"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jk_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_jk_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/gender"
                        android:text="@={data_mhs.jenisKelamin}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jurusan_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_jurusan_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/major"
                        android:text="@={data_mhs.jurusan}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_no_hp_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_no_hp_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/number_phone"
                        android:inputType="phone"
                        android:text="@={data_mhs.noHp}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_email_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={data_mhs.email}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_agama_mhs_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_agama_mhs_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/religion"
                        android:text="@={data_mhs.agama}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_simpan_mhsdetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save"
                        android:onClick="@{activity::saveData}"
                        android:background="@drawable/round"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@android:color/holo_green_dark"
                        android:layout_margin="5dp"/>
                    <Button
                        android:id="@+id/btn_hapus_mhsdetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:onClick="@{activity::delete}"
                        android:background="@drawable/round"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@android:color/holo_red_dark"
                        android:layout_margin="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pb_msh_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>