<?xml version="1.0" encoding="utf-8"?>

<!--Created by Deni Supriyatna on 10 - Mar - 2020.-->
<!--Email : denisupriyatna01@gmail.com-->

<layout>

    <data>

        <import type="com.deni.retrofitcrud.MainActivity" />

        <variable
            name="activity"
            type="MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".MainActivity">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbars="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round"
                    android:text="@string/get"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round"
                    android:text="@string/post"
                    android:onClick="@{activity::goToSendData}"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btn_get1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round"
                    android:onClick="pindahGet1"
                    android:text="@string/get1"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_get_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/round"
                    android:onClick="@{activity::goToGetAll}"
                    android:text="@string/get_all"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>